--- a/getMimicVectorForToml.ipynb
+++ b/getMimicVectorForToml.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
     "import pandas as pd\n",
-    "import scispacy. as sv"
+    "from scispacy_fun.CustomSpacyF import  CustomSpacyF"
    ]
   },
   {
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "strVer = \"10\"\n",
-    "nlp = spacy.load(\"en_core_sci_lg\")"
+    "csf  = CustomSpacyF()\n"
    ]
   },
   {
@@ -37,22 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "psychosis 3.1402366\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dicVector = sv.getVector(nlp,\"psychosis\")\n",
-    "\n",
-    "for word,vec in dicVector.items():\n",
-    "    print(word,vec)"
+    "print(csf.getVector(\"psychosis\"))"
    ]
   },
   {
@@ -64,21 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['heart type disease', 1.8547993]\n",
-      "['neurological type disease', 1.7834562]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(sv.getSentenceVector(nlp,\"heart type disease\"))\n",
-    "print(sv.getSentenceVector(nlp,\"neurological type disease\"))"
+    "print(csf.getSentenceVector(\"heart type disease\"))\n",
+    "print(csf.getSentenceVector(\"neurological type disease\"))"
    ]
   },
   {
@@ -90,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import toml \n",
     "\n",
-    "dicTmp = toml.load(\"/Users/alros/lab/mimic/icd.toml\")\n",
+    "dicTmp = toml.load(\"icd.toml\")\n",
     "\n",
     "dicFIcdTen = {}\n",
     "\n",
@@ -117,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,21 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'items'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/alros/lab/nlp/scispacyModel/getMimicVec/getMimicVector.ipynb Cell 17'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alros/lab/nlp/scispacyModel/getMimicVec/getMimicVector.ipynb#ch0000015?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m disease,dic \u001b[39min\u001b[39;00m dicIcdInfo\u001b[39m.\u001b[39mitems():\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alros/lab/nlp/scispacyModel/getMimicVec/getMimicVector.ipynb#ch0000015?line=6'>7</a>\u001b[0m     dicTmp \u001b[39m=\u001b[39m {}\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/alros/lab/nlp/scispacyModel/getMimicVec/getMimicVector.ipynb#ch0000015?line=7'>8</a>\u001b[0m     \u001b[39mfor\u001b[39;00m code,title \u001b[39min\u001b[39;00m dic\u001b[39m.\u001b[39;49mitems():\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alros/lab/nlp/scispacyModel/getMimicVec/getMimicVector.ipynb#ch0000015?line=8'>9</a>\u001b[0m         aryVec \u001b[39m=\u001b[39m sv\u001b[39m.\u001b[39mgetSentenceVector(nlp,title,blnStayComma \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m,blnStayBrackets \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alros/lab/nlp/scispacyModel/getMimicVec/getMimicVector.ipynb#ch0000015?line=9'>10</a>\u001b[0m         \u001b[39m#print(title,vec)\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'items'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dicVector = {}\n",
     "dicTmp = {}\n",
@@ -261,7 +229,7 @@
     "\n",
     "    dicTmp = {}\n",
     "    for code,title in dic.items():\n",
-    "        aryVec = sv.getSentenceVector(nlp,title,blnStayComma = False,blnStayBrackets = False)\n",
+    "        aryVec = csf.getSentenceVector(title,blnStayComma = False,blnStayBrackets = False)\n",
     "        #print(title,vec)\n",
     "        strNewTitle = aryVec[0]\n",
     "        odjVec = aryVec[1]\n",
